--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -42,6 +42,13 @@
         android:text="@string/crime_suspect_text" />
 
     <Button
+        android:id="@+id/crime_call_suspect"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="@string/call_suspect"
+        android:enabled="false"/>
+
+    <Button
         android:id="@+id/crime_report"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
