--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -24,13 +24,16 @@
                 android:layout_height="80dp"
                 android:scaleType="centerInside"
                 android:cropToPadding="true"
-                android:background="@android:color/darker_gray"/>
+                android:background="@android:color/darker_gray"
+                android:contentDescription="@string/crime_photo_no_image_description"
+                android:focusable="true"/>
 
             <ImageButton
                 android:id="@+id/crime_camera"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:src="@android:drawable/ic_menu_camera"/>
+                android:src="@android:drawable/ic_menu_camera"
+                android:contentDescription="@string/crime_photo_button_description"/>
 
         </LinearLayout>
 
@@ -44,7 +47,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="@string/crime_title_label"
-                style="?android:listSeparatorTextViewStyle"/>
+                style="?android:listSeparatorTextViewStyle"
+                android:labelFor="@+id/crime_title"/>
 
             <EditText
                 android:id="@+id/crime_title"
